# apone

./: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  CODE.DESIGN.md  EXAMPLES.md  Fifo.h  LICENSE  Makefile  Makefile.inc  Makefile.old  MusicPlayer.h  README.md  android.mk  basic_buffer.cpp  basic_buffer.h  bitmap.h  bobs.cpp  build.mk  color.cpp  color.h  config.mk  dbworker.cpp  demo.cpp  fixManifest.py  font.cpp  font.h  grappix.h  hvsc.mk  image.cpp  main.cpp  map.cpp  module.mk  playsid.cpp  playsid.mk  render_target.cpp  render_target.h  renderbuffer.cpp  renderbuffer.h  server.js  shader.cpp  (+17 more)
audioplayer/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  module.mk  player_linux.h  player_sdl.h  player_sl.cpp  player_sl.h
examples/: CMakeLists.txt  demo.cpp  simple.cpp
examples/demo/: CMakeLists.txt  demo.cpp
examples/simple/: CMakeLists.txt
examples/skeleton/: CMakeLists.txt
examples/snake/: CMakeLists.txt  snake.cpp
fft/: CMP_fft.c  CMP_fft.h  CMP_fft_1024.h  CMP_fft_2048.h  CMP_fft_4096.h  CMakeLists.txt  fft.h  module.mk  spectrum.cpp  spectrum.h
fft/fftw-3.3.4/: config.h
fft/fftw-3.3.4/api/: Makefile
fft/fftw-3.3.4/api/.deps/: apiplan.Plo  configure.Plo  execute-dft.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-wisdom-from-string.Plo  mapflags.Plo  plan-dft-3d.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-guru-dft-r2c.Plo  plan-guru-dft.Plo  plan-guru-r2r.Plo  plan-guru64-dft-r2c.Plo  plan-guru64-dft.Plo  plan-guru64-r2r.Plo  plan-guru64-split-dft-c2r.Plo  plan-many-dft-r2c.Plo  plan-many-dft.Plo  plan-r2r-1d.Plo  plan-r2r.Plo  the-planner.Plo  version.Plo
fft/fftw-3.3.4/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  nop.Plo  (+7 more)
fft/fftw-3.3.4/doc/: Makefile
fft/fftw-3.3.4/m4/: Makefile
fft/fftw-3.3.4/mpi/: Makefile
fft/fftw-3.3.4/reodft/: Makefile
fft/fftw-3.3.4/threads/: Makefile
fft/fftw-3.3.4/tools/: Makefile
grappix/: CMakeLists.txt  bitmap.h  buffer.cpp  c64dat.cpp  distancefield.cpp  font.cpp  font.h  grappix.h  image.cpp  image.h  module.mk  post.js  render_target.cpp  render_target.h  shader.cpp  shader.h  sidplayer.cpp  staticfont.h  texture.cpp  texture.h  tiles.cpp  tiles.h  tween.cpp  tween.h  window.h
grappix/android/: build.xml  window_android.cpp
grappix/demo/: Makefile  MusicPlayer.cpp  MusicPlayer.h  demo.cpp  simple.mk  snake.cpp  tiletest.cpp
grappix/freetype/: module.mk
grappix/freetype-gl/: opengl.h
grappix/grappix/: color.cpp  color.h  font.cpp  font.h  frame.h  grappix.h  image.h  render_target.cpp  render_target.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h  tiles.cpp  tiles.h  transform.h  tween.cpp  tween.h  window.h
grappix/grappix/android/: window_android.cpp
grappix/grappix/freetype-gl/: README  texture-font.c
grappix/grappix/gui/: list.h
grappix/grappix/pc/: window.cpp
grappix/grappix/shaders/: font_f.glsl  font_v.glsl  fontdf_f.glsl  plain_v.glsl  texture_f.glsl  texture_v.glsl
grappix/grappix/specific/: eglutil.cpp  window_android.cpp  window_base.h  window_pc.cpp  window_pi.cpp
grappix/pc/: window.cpp
grappix/shaders/: fontdf_f.glsl  plain_v.glsl  texture_f.glsl  texture_v.glsl
image/: CMakeLists.txt  bitmap.h  image.cpp  module.mk  packer.cpp  packer.h  test.mk
image/android/: README
image/android/lib/: libpng16.la
lua/: CMakeLists.txt  Makefile  luainterpreter.cpp  luainterpreter.h  module.mk
lua/lua-5.2.3/: CMakeLists.txt
mods/audioplayer/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  player_linux.h  player_osx.h  player_sl.h  player_win.cpp  player_win.h
mods/bbsutils/: CMakeLists.txt  README.md  ansiconsole.cpp  ansiconsole.h  console.cpp  console.h  editor.cpp  editor.h  localconsole.cpp  localconsole.h  localterminal.h  module.mk  petsciiconsole.cpp  telnetserver.cpp  telnetserver.h  terminal.h
mods/coreutils/: CMakeLists.txt  README.md  dispatch.h  dll.h  environment.h  fifo.h  file.cpp  file.h  format.cpp  format.h  jis.h  keycodes.h  log.cpp  log.h  module.mk  newfile.h  newfile.t.cpp  path.h  searchpath.h  settings.h  test.mk  thread.h  utils.cpp  utils.h  var.h  vec.h
mods/coreutils/mingw-std-threads/: mingw.mutex.h  mutex
mods/fft/: CMakeLists.txt  Makefile  spectrum.cpp  spectrum.h  test.cpp
mods/fft/fftw-3.3.4/: Makefile  config.h  config.status  libtool
mods/glew/: CMakeLists.txt
mods/grappix/: .gitignore  CMakeLists.txt  NOTES.md  README.md  grappix.h
mods/grappix/freetype/: module.mk
mods/grappix/grappix/: GL_Header.h  buffer.cpp  buffer.h  color.cpp  color.h  distancefield.cpp  font.cpp  font.h  frame.cpp  frame.h  grappix.h  rectangle.h  render_target.cpp  render_target.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h  tiles.cpp  tiles.h  transform.cpp  transform.h  translation.h  window.cpp  window.h
mods/image/: CMakeLists.txt  bitmap.h  image.cpp  image.h  packer.cpp  packer.h
mods/json/json-c/: CMakeLists.txt  config.h
mods/luainterpreter/lua-5.2.3/: CMakeLists.txt
mods/netlink/: CMakeLists.txt  module.mk  socket.cc
mods/netlink/netlink/: config.h
mods/sqlite3/: CMakeLists.txt  README.md  database.cpp  database.h  old_db.h  sqlite3.h
mods/tween/: CMakeLists.txt  module.mk  tween.cpp  tween.h
mods/webutils/: CMakeLists.txt  README.md  module.mk  web.cpp  web.h  webgetter.cpp  webgetter.h  webgetter_em.cpp  webrpc.cpp  webrpc.h
mods/webutils2/: CMakeLists.txt  README.md  sinks.h  web.cpp  web.h
mods/zlib/: CMakeLists.txt
mods/zlib/zlib-1.2.8/: adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zutil.lo
musicplayer/plugins/GSFPlugin/: CMakeLists.txt  GSFPlugin.cpp  module.mk
test/: CMakeLists.txt  Makefile  Makefile.inc  bbstest.cpp  chattest.cpp  chattest.mk  shelltest.cpp  shelltest.mk  simplebbs.cpp  simplebbs.mk  test.mk  utest.cpp
(+746 files in other folders)
